# habit_tracker

./: .coveragerc  .flake8  .simple.env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habit/: admin.py  models.py  paginations.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/migrations/: 0001_initial.py  0002_rename_pleasant_habit_pleasant_habit_and_more.py  0003_alter_habit_periodicity.py  0004_alter_habit_execution_time.py  0005_alter_habit_periodicity.py  0006_alter_habit_periodicity.py  0007_alter_habit_periodicity.py  0008_alter_habit_periodicity.py  0009_alter_habit_periodicity.py  0010_alter_habit_periodicity.py  0011_rename_pleasant_habit_habit_is_pleasant_and_more.py  0012_alter_habit_periodicity.py  0013_alter_habit_periodicity.py  0014_alter_habit_periodicity.py  0015_alter_habit_periodicity.py  0016_alter_habit_periodicity.py  0017_alter_habit_periodicity.py  0018_rename_public_habit_is_public.py  0019_habit_reminder_time.py  0020_alter_habit_reminder_time.py  0021_habit_send_status.py  0022_alter_habit_periodicity_alter_habit_reminder_time.py  0023_alter_habit_reminder_time.py
users/: admin.py  models.py  permissions.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_tg_name_and_more.py  0003_remove_user_tg_name_user_tg_chat_id.py
